# mi

./: .gitignore  README.md  pyproject.toml
examples/: sae_cpu_workflow.md
examples/claims/: france_paris.yml
examples/families/: capital_cities.yml
examples/suites/: capital_cities.yml  factual_recall.yml  induction.yml  ioi_toy.yml  refusal.yml
mi/: __init__.py
mi/backends/: __init__.py  base.py  circuit_tracer_backend.py  hf_hooks_backend.py  nnsight_backend.py  transformer_lens_backend.py
mi/cli/: __init__.py  main.py
mi/core/: __init__.py  artifact_store.py  circuit_tracer.py  cts.py  diff.py  fuzz.py  graph_builder.py  graph_ir.py  hypothesis.py  metrics.py  neuronpedia.py  regression.py  schema.py  scoring.py  validation.py
mi/dictionaries/: __init__.py  base.py  neuronpedia_dictionary.py  nla_dictionary.py  raw_neuron_dictionary.py  saelens_dictionary.py  transcoder_dictionary.py
mi/methods/: __init__.py  activation_capture.py  activation_patching.py  attribution_patching.py  circuit_graph.py  direct_logit_attribution.py  feature_ablation.py  feature_steering.py  features.py  localization.py  logit_lens.py  negative_controls.py  path_patching.py  prompt_fuzzer.py
mi/report/: html.py  (+3 more)
tests/: conftest.py  test_artifact_store.py  test_backends.py  test_circuit_tracer.py  test_cli.py  test_diff.py  test_features.py  test_fuzz_cts.py  test_graph.py  test_html.py  test_localization_methods.py  test_neuronpedia.py  test_regression.py  test_report.py  test_schema.py  test_transformer_lens_backend.py  test_transformer_lens_unit.py  test_validation.py
