[project]
name = "mi"
version = "0.9.0"
description = "Mechanistic interpretability as reproducible evidence."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "mi contributors" }
]
keywords = ["mechanistic-interpretability", "transformers", "causal-tracing", "sae"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "circuit-tracer>=0.5.0",
  "neuronpedia>=1.2.0",
  "nnsight>=0.7.0",
  "numpy>=1.26,<3",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "rich>=13.7",
  "sae-lens>=6.43.0",
  "transformer-lens>=3.2.1",
  "typer>=0.16",
]

[project.scripts]
mi = "mi.cli.main:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mi"]

[tool.pytest.ini_options]
addopts = ["-m", "not integration"]
testpaths = ["tests"]
markers = [
  "integration: tests that load external model libraries or weights",
]
